# uav_api

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mav.parm  mav.tlog  mav.tlog.raw  pyproject.toml  requirements.txt
.claude/docs/: architectural_patterns.md  dev-and-run.md  flight-examples-map.md  mavlink-and-coordinate-frames.md  plane-support.md  specification.md  tests.md
flight_examples/: flight_helpers.py  formation_demo.py  generate_uav_config.py  go_to_poligon.py  takeoff_land_h3.py
flight_examples/delivery/: README.md  delivery_simulation.py  t3.py
flight_examples/drive_polygon/: drive_polygon.py
flight_examples/follow/: follow.py
flight_examples/go_to_polygon/: go_to_polygon.py
flight_examples/gps_follower/: gps_follower.py
flight_examples/ned_square/: ned_square.py
flight_examples/ned_square_polling/: ned_square_polling.py
flight_examples/poligon/: drive_poligon.py
flight_examples/polygon/: drive_polygon.py  go_to_polygon.py
flight_examples/t3_lucaslarios/: qrcode_creator.py  (+1 more)
systemd/: install.sh  uav-api.service
tests/: command_test.py  conftest.py  mission_test.py  movement_test.py  peripherical_test.py  telemetry_test.py
uav-api/: copter.py  simulation.py  uav_api.py  uav_args.py
uav_agent/: pyproject.toml
uav_agent/uav_agent/: agent.py  chat.py  config.py
uav_agent/uav_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
uav_api/: api_app.py  args.py  copter.py  gradys_gs.py  lifespan.py  log.py  router_dependencies.py  run_api.py  setup.py  simulation.py
uav_api.egg-info/: PKG-INFO  SOURCES.txt
(+25 files in other folders)
